# mg

./: .cvsignore  .gitignore  .mg  CMakeLists.txt  GNUmakefile  Makefile  README.md  Vagrantfile  basic.c  buffer.c  chrdef.h  cinfo.c  cmode.c  compat.h  def.h  dired.c  display.c  echo.c  extend.c  file.c  fileio.c  funmap.c  grep.c  help.c  interpreter.c  kbd.c  keymap.c  line.c  llm.c  main.c  makemode.c  match.c  meson.build  mg.1  modes.c  paragraph.c  re_search.c  recallocarray.c  region.c  search.c  (+10 more)
CVS/: Entries  Repository  Root
mg-static/: README.md  generate-mg-static
